[package]
name = "ceremusic"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
poise = "0.5.5"
shuttle-poise = "0.30.0"
shuttle-runtime = "0.30.0"
shuttle-secrets = "0.30.0"
tracing = "0.1.37"
tokio = "1.28.2"
songbird = { version = "0.3.2", features = ["yt-dlp", "builtin-queue"] }
