[package]
name = "ceremusic"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies.symphonia]
version = "0.5.3"
features = ["aac", "mp3", "isomp4", "alac"]

[dependencies]
anyhow = "1.0.79"
poise = "0.6.1"
reqwest = "0.11.24"
shuttle-runtime = "0.38.0"
shuttle-secrets = "0.38.0"
shuttle-serenity = "0.38.0"
songbird = { version = "0.4.0", features = ["builtin-queue"] }
tokio = "1.36.0"
tracing = "0.1.40"
