[package]
name = "ceremusic"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies.symphonia]
version = "0.5.3"
features = ["aac", "mp3", "isomp4", "alac"]

[dependencies]
anyhow = "1.0.68"
poise = "0.6.1"
shuttle-runtime = "0.47.0"
shuttle-serenity = "0.47.0"
tracing = "0.1.37"
tokio = "1.26.0"

songbird = { version = "0.4.3", features = ["builtin-queue"] }
reqwest = "0.11.27"
